--- a/css/law.html
+++ b/css/law.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Environmental Law Class</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/law.css">
 </head>
 <body>
     <header>
